--- a/templates/materiel/new.html.twig
+++ b/templates/materiel/new.html.twig
@@ -11,7 +11,7 @@
         <div class="row">
             <!-- left column -->
             <div class="col-md-12">
-                <div class="card card-primary">
+                <div class="card card-primary card-outline">
                 <div class="card-header">
                     <h1 class="card-title">Ajout de nouveau materiel</h1>
                 </div>
