--- a/templates/stock/achat.html.twig
+++ b/templates/stock/achat.html.twig
@@ -1,7 +1,7 @@
 
 {% extends 'template.html.twig' %}
 {% block pageName %} 
-Stock
+Approvisionnement
 {% endblock %}
 
 
@@ -14,7 +14,7 @@ Stock
             <div class="col-md-12">
                 <div class="card card">
                         <div class="card-header">
-                            <h1 class="card-title">Emmagasiner  
+                            <h1 class="card-title">Emmmagasiner 
                               {% if stock %}  
                                 {{ stock.materiel }}
                                 {% else %}
