--- a/templates/approvisonnement/approvisionnement.html.twig
+++ b/templates/approvisonnement/approvisionnement.html.twig
@@ -3,18 +3,26 @@
 {% block pageName %} 
 Approvisionnement
 {% endblock %}
-
-
-
 {% block body %}
 <section class="content">
       <div class="container-fluid">
         <div class="row">
             <!-- left column -->
             <div class="col-md-12">
-                <div class="card card-primary">
+                <div class="card card-primary card-outline">
                         <div class="card-header">
-                            <h1 class="card-title">Approvisionner un Site</h1>
+                            <h1 class="card-title">Approvisionner 
+                             {% if stock %}  
+                                {{ stock.materiel }}
+                                à
+                                {{ stock.site }}
+                                {% else %}
+                                    un Site
+                                {% endif %}
+
+                                
+                            
+                            </h1>
                         </div>
                         <div class="card-body">
                             {{ include('stock/_form.html.twig') }}
