--- a/templates/arrive/index.html.twig
+++ b/templates/arrive/index.html.twig
@@ -7,13 +7,22 @@
     <section class="content">
       <div class="container-fluid">
         <div class="row">
+            <div class="col-lg-3 col-6">
+              <!-- small box -->
+              <div class="small-box bg-info">
+                <a href="{{ path('app_arrive_nouveau') }}" class="small-box-footer"><i class="fas fa-plus"> </i>  Nouveau Rapport </a>
+                              </div>
+            </div>
+            <!-- ./col -->
+        </div>
+        <div class="row">
           <div class="col-12">
-            <div class="card">
+            <div class="card card-primary card-outline">
               <div class="card-header">
                     <h3 class="card-title mr-5">Liste des rapports arrivé</h3>
                    
             
-                    <div class="card-tools">
+                    {# <div class="card-tools">
                         <div class="input-group input-group-sm" style="width: 150px;">
                     
                             <input type="text" name="table_search" class="form-control float-right" placeholder="Recherche">
@@ -23,7 +32,7 @@
                             </div>
                         </div>
                     
-                    </div>
+                    </div> #}
                 </div>
               <!-- /.card-header -->
               <div class="card-body table-responsive p-0 " style="height: 350px;">
@@ -31,10 +40,10 @@
                   <thead>
                     <tr>
                         <th></th>
-                        <th>Numero de vol</th>
-                        <th>Date de Vol</th>
+                        <th>Site</th>
+                        <th>Type de vol</th>
                         <th>Date de Rapport</th>
-                        <th></th>
+                        <th>Technicien</th>
                         <th></th>
                     </tr>
                   </thead>
@@ -43,14 +52,15 @@
 
                     <tr>
                         <td>{{ i +1 }}</td>
-                        <td>{{ rapport.numeroVol ? : '-' }}</td>
-                        <td>{{ rapport.dateVol ? rapport.dateVol|date('Y-m-d') : '-' }}</td>
-                        <td>{{ rapport.getDateRapport() ? rapport.getDateRapport()|date('Y-m-d') : '-' }}</td>
-
+                        <td>{{ rapport.site }} </td>
+                        <td>{{ rapport.typeRapport }}</td>
+                        <td>{{ rapport.getDateRapport() ? rapport.getDateRapport()|date('Y/m/d') : '-' }}</td>
+                        <td>{{ rapport.utilisateur }}</td>
+                        <td><a href="{{ path('app_rapport_show',{'id': rapport.id}) }}" class="btn btn-info"><i class="fas fa-eye"> Détail</i></a></td>
                     </tr>
                 {% else %}
                     <tr>
-                        <td colspan="5" >(Aucun rapport effectué)</td>
+                        <td colspan="5"  class="text-center">(Aucun rapport trouvé)</td>
                     </tr>
                 {% endfor %}
                   </tbody>
@@ -60,7 +70,7 @@
                <!-- /.card-footer -->
             
                 <div class="card-footer clearfix">
-                    <a class="ml-5 btn btn-sm btn-success text-light float-right"  href ="{{ path('app_arrive_nouveau') }}"><i class="fas fa-plus"> Nouveau rapport</i> </a>
+                   {#  <a class="ml-5 btn btn-sm btn-success text-light float-right"  href ="{{ path('app_arrive_nouveau') }}"><i class="fas fa-plus"> Nouveau rapport</i> </a> #}
                 </div>
                 <!-- /.card-footer -->
             </div>
