--- a/templates/departement/show.html.twig
+++ b/templates/departement/show.html.twig
@@ -1,30 +1,39 @@
-{% extends 'base.html.twig' %}
+{% extends 'template.html.twig' %}
+{% block pageName %} 
+    Département
+{% endblock %}
 
-{% block title %}Departement{% endblock %}
 
 {% block body %}
-    <h1>Departement</h1>
+<section class="content">
+      <!-- Default box -->
+      <div class="card card-primary card-outline">
+              <div class="card-body box-profile">
+                <h3 class="profile-username text-center">{{ departement}}</h3>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ departement.id }}</td>
-            </tr>
-            <tr>
-                <th>NomDepart</th>
-                <td>{{ departement.nomDepart }}</td>
-            </tr>
-            <tr>
-                <th>Remarque</th>
-                <td>{{ departement.remarque }}</td>
-            </tr>
-        </tbody>
-    </table>
+                <p class="text-muted text-center">{{ departement.remarque}}</p>
+                <p > <b>Les membres:</b></p>
+                <ul class="list-group list-group-unbordered mb-3"> 
+                    {% for membre in departement.mailsDepartements %}
+                         <li class="list-group-item">
+                            <b>{{membre.nomEmp}}</b> <a class="ml-5 text-center"> <i class="fas fa-envelope"></i>  {{membre.email}}</a> 
+                            <a class="float-right btn btn-sm btn-success text-light   "><i class="fas fa-pencil-alt"></i> Modifier</a>
+                            <a class="float-right btn btn-sm btn-danger text-light mr-3 "><i class="fas fa-trash"></i> Suprimer</a>
+                        </li>
+                        
+                    {% endfor %}
+                 
+                </ul>
+              </div>
+              <div class="card-footer">
+                <div class="float-right">
+                  <a href="{{path('app_membre_new', {'id': departement.id})}}" class="btn btn-primary text-light"><i class="fas fa-plus"></i> Ajouter Membre</a>
+                </div>
+                <button type="reset" class="btn btn-default"><i class="fas fa-times"></i> Retour</button>
+              </div>
+              <!-- /.card-body -->
+            </div>
+      <!-- /.card -->
 
-    <a href="{{ path('app_departement_index') }}">back to list</a>
-
-    <a href="{{ path('app_departement_edit', {'id': departement.id}) }}">edit</a>
-
-    {{ include('departement/_delete_form.html.twig') }}
+</section>
 {% endblock %}
