--- a/templates/rapport/index.html.twig
+++ b/templates/rapport/index.html.twig
@@ -1,104 +1,106 @@
-{# {% extends 'base.html.twig' %}
-
-{% block title %}Rapport index{% endblock %}
-
-{% block body %}
-    <h1>Rapport index</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th></th>
-                <th>Numero de vol</th>
-                <th>Date de Vol</th>
-                <th>Date de Rapport</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for rapport in rapports %}
-            <tr>
-                <td>{{ rapport.id }}</td>
-                <td>{{ rapport.numeroVol }}</td>
-                <td>{{ rapport.dateVol ? rapport.dateVol|date('Y-m-d') : '' }}</td>
-                <td>{{ rapport.getDateRapport() ? rapport.getDateRapport()|date('Y-m-d') : '' }}</td>
-                <td>
-                    <a href="{{ path('app_rapport_show', {'id': rapport.id}) }}">show</a>
-                    <a href="{{ path('app_rapport_edit', {'id': rapport.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="7">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_rapport_new') }}">Create new</a>
-{% endblock %} #}
 {% extends 'template.html.twig' %}
 {% block pageName %} 
- Depart
+ Rapports
 {% endblock %}
 
 {% block body %}
+   {#  {{ form_start(form) }}
+      <div class="card-body">
+        <div class="form-group">
+              {{ form_row(form.site, {label: 'Site', 'attr': {'class': 'form-control'}}) }}
+        </div>
+        <div class="form-group">
+              {{ form_row(form.typeRapport, {label: "Type de Rapport", 'attr': {'class': 'form-control'}}) }}
+        </div>
+        <div class="form-group">
+              {{ form_row(form.dateDebut)}}
+              {{ form_row(form.dateFin)}}
+        </div>
+
+        <!-- /.card-body -->
+        <div class="card-footer">
+            <button type="submit" class="btn btn-primary">Ajouter</button>
+        </div>
+      </div>
+    {{ form_end(form) }} #}
     <section class="content">
       <div class="container-fluid">
-              <div class="row">
+        <div class="row">
+           <div class="col-10 mb-3"> 
+              {{ form_start(form) }}
+                       
+                        <div class="row">
+                            <div class="col-3">
+                              {{ form_row(form.site, {'attr': {'class': 'form-control float-right '}}) }}
+                            </div>
+                            <div class="col-2">
+                              {{ form_row(form.typeRapport, {'attr': {'class': 'form-control float-right'}}) }}
+                            </div>
+                            <div class="col-3">
+                              {{ form_row(form.dateDebut)}}
+                            </div>
+                            <div class="col-3">
+                              {{ form_row(form.dateFin)}}
+                           
+                            </div>
+                            <div class="col-1">
+                              <div class="input-group-append ">
+                                  <button type="submit" class="btn btn-default"><i class="fas fa-search"></i></button>
+                              </div>
+                            </div>{#  <input type="text" name="table_search" class="form-control float-right" placeholder="Recherche"> #}
+                          </div>
+                        
+             {{ form_end(form) }}
+          </div>
           <div class="col-12">
             <div class="card">
               <div class="card-header">
-                <h3 class="card-title mr-5">Liste des Rapport de Départ</h3>
-                
-                <div class="card-tools">
-                <div class="input-group input-group-sm" style="width: 150px;">
-                    <input type="text" name="table_search" class="form-control float-right" placeholder="Recherche">
-
-                    <div class="input-group-append">
-                      <button type="submit" class="btn btn-default"><i class="fas fa-search"></i></button>
-                    </div>
+                    <h3 class="card-title mr-5">Liste des rapports arrivé</h3> 
                 </div>
-                <div class="mt-3 input-group input-group-sm">
-                    <a class="btn btn-success text-light" href ="{{ path('utilisateur.ajout') }}"><i class="fas fa-plus"> Nouveau rapport</i> </a>
-                </div>
-              </div>
               <!-- /.card-header -->
-              <div class="card-body table-responsive p-0 mt-5" style="height: 300px;">
-                <table class="table table-hover text-nowrap">
+
+              <div class="card-body table-responsive p-0 " style="height: 350px;">
+                <table class="table table-head-fixed text-nowrap">
                   <thead>
                     <tr>
                         <th></th>
-                        <th>Numero de vol</th>
-                        <th>Date de Vol</th>
+                        <th>Site</th>
+                        <th>Type de vol</th>
                         <th>Date de Rapport</th>
-                        <th></th>
+                        <th>Technicien</th>
                         <th></th>
                     </tr>
                   </thead>
                   <tbody>
-                {% for rapport in rapports %}
+                {% for i,rapport in rapports %}
 
                     <tr>
-                        <td>{{ rapport.id }}</td>
-                        <td>{{ rapport.numeroVol }}</td>
-                        <td>{{ rapport.dateVol ? rapport.dateVol|date('Y-m-d') : '' }}</td>
-                        <td>{{ rapport.getDateRapport() ? rapport.getDateRapport()|date('Y-m-d') : '' }}</td>
-
+                        <td>{{ i +1 }}</td>
+                        <td>{{ rapport.site }} </td>
+                        <td>{{ rapport.typeRapport }}</td>
+                        <td>{{ rapport.getDateRapport() ? rapport.getDateRapport()|date('d/m/Y') : '-' }}</td>
+                        <td>{{ rapport.utilisateur }}</td>
+                        <td><a href="{{ path('app_rapport_show',{'id': rapport.id}) }}" class="btn btn-success"><i class="fas fa-eye"> Voir</i></a></td>
                     </tr>
                 {% else %}
-            <tr>
-                <td colspan="5" >Aucun Rapport</td>
-            </tr>
-        {% endfor %}
+                    <tr>
+                        <td colspan="5"  class="text-center">(Aucun rapport trouvé)</td>
+                    </tr>
+                {% endfor %}
                   </tbody>
                 </table>
               </div>
               <!-- /.card-body -->
+               <!-- /.card-footer -->
+            
+
+                <!-- /.card-footer -->
             </div>
             <!-- /.card -->
           </div>
         </div>
         <!-- /.row -->
-      </div><!-- /.container-fluid -->
+      </div>
+      <!-- /.container-fluid -->
     </section>
 {% endblock %}
