--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -22,7 +22,11 @@
 <body class="hold-transition login-page">
 <div class="login-box">
   <div class="login-logo">
-    <a href="../../index2.html">LTE</a>
+      {# <img src="{{asset('assets/dist/img/logo_evisa.png')}}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
+           style="opacity: .8"> #}
+           <div class="text-center">
+                  <img class="profile-user-img img-fluid img-circle" src="{{asset('assets/dist/img/logo_evisa.png')}}" alt="User profile picture">
+              </div>
   </div>
   <!-- /.login-logo -->
   <div class="card">
@@ -70,12 +74,12 @@
           <!-- /.col -->
         </div>
       </form>
-      <p class="mb-1">
+      {# <p class="mb-1">
         <a href="forgot-password.html">Mot de passe oublié</a>
       </p>
       <p class="mb-0">
         <a href="register.html" class="text-center">S'inscrire</a>
-      </p>
+      </p> #}
     </div>
     <!-- /.login-card-body -->
   </div>
