--- a/templates/site/edit.html.twig
+++ b/templates/site/edit.html.twig
@@ -1,13 +1,50 @@
-{% extends 'base.html.twig' %}
 
-{% block title %}Edit Site{% endblock %}
+{% extends 'template.html.twig' %}
+{% block pageName %} 
+Site
+{% endblock %}
+  {% block javascript %}
+ {% endblock %}
 
 {% block body %}
-    <h1>Edit Site</h1>
+<section class="content">
+      <div class="container-fluid">
+        <div class="row">
+            <!-- left column -->
+            <div class="col-md-12">
+                <div class="card card-primary card-outline">
+                    <div class="card-header">
+                        <h1 class="card-title">Modifier le site : {{site.lieu}}</h1>
+                    </div>
+                    <!-- /.card-header -->
+                    <!-- form start -->
+                    {{ form_start(form) }}
+                        <div class="card-body">
+                            <div class="form-group">
+                                {{ form_row(form.lieu,{label: 'Lieu:', 'attr': {'class': 'form-control'}}) }}
+                            </div>
+                            <div class="form-group">
+                                {{ form_row(form.remarque, {label: 'Remarque'}) }}
+                            </div>   
+                        </div>
+                        
 
-    {{ include('site/_form.html.twig', {'button_label': 'Update'}) }}
+                        <!-- /.card-body -->
+                        <div class="card-footer">
+                            <button type="submit" class="btn btn-primary float-right"><i class="fas fa-plus"></i> Mettre à jour</button>
+                        
+                            <a href=" /site/" class="btn btn-default "><i class="right fas fa-angle-left"></i> Retour</a>
+                        
+                        </div>
+                    {{ form_end(form) }}
+                </div>
+            </div>
+            <!-- /.card -->
+        </div>
+    </div>
+</section>
 
-    <a href="{{ path('app_site_index') }}">back to list</a>
 
-    {{ include('site/_delete_form.html.twig') }}
+
 {% endblock %}
+
