--- a/templates/template.html.twig
+++ b/templates/template.html.twig
@@ -56,8 +56,8 @@
           </div><!-- /.col -->
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
-              <li class="breadcrumb-item active">Dashboard v1</li>
+              {# <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+              <li class="breadcrumb-item active">Dashboard v1</li> #}
             </ol>
           </div><!-- /.col -->
         </div><!-- /.row -->
@@ -74,11 +74,11 @@
   </div>
   <!-- /.content-wrapper -->
   <footer class="main-footer">
-    <strong>Copyright &copy; 2014-2020 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
+    {# <strong>Copyright &copy; 2014-2020 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
     All rights reserved.
     <div class="float-right d-none d-sm-inline-block">
       <b>Version</b> 3.0.6-pre
-    </div>
+    </div> #}
   </footer>
 
   <!-- Control Sidebar -->
