--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -18,36 +18,43 @@
         <div class="row">
             <!-- left column -->
             <div class="col-md-12">
-                <div class="card card-primary">
+                <div class="card card-primary card-outline ">
                 <div class="card-header">
-                    <h1 class="card-title">Ajouter un nouvel utilisateur</h1>
+                    <h1 class="card-title">Modification utilisateur</h1>
                 </div>
                 <!-- /.card-header -->
                 <!-- form start -->
                 {{ form_start(form) }}
                     <div class="card-body">
-                    <div class="form-group">
-                         {{ form_row(form.no_mat, {label: 'N° Matricule'}) }}
-                    </div>
-                    <div class="form-group">
-                         {{ form_row(form.noms, {label: 'Noms'}) }}
-                    </div>
-                    <div class="form-group">
-                         {{ form_row(form.prenoms, {label: 'Prénoms'}) }}
-                    </div>
-                    <div class="form-group">
-                         {{ form_row(form.email, {label: 'Email'}) }}
-                    </div>
-                    <div class="form-group">
-                         {{ form_row(form.roles, {label: 'Roles'}) }}
-                    </div>
+                        <div class="form-group">
+                            {{ form_row(form.no_mat, {label: 'N° Matricule'}) }}
+                        </div>
+                        <div class="form-group">
+                            {{ form_row(form.noms, {label: 'Noms'}) }}
+                        </div>
+                        <div class="form-group">
+                            {{ form_row(form.prenoms, {label: 'Prénoms'}) }}
+                        </div>
+                        <div class="row">
+                                <div class=" col-6 form-group">
+                                        {{ form_row(form.email, {label: 'Email'}) }}
+                                </div>
+                                <div class=" col-6 form-group">
+                                    {{ form_row(form.telephones, {label: 'N° Téléphones'}) }}
+                                </div>
+                            </div>
+                        <div class="form-group">
+                            {{ form_row(form.roles, {label: 'Roles'}) }}
+                        </div>
                     {# <div class="form-group">
                          {{ form_row(form.password, {label: 'Mot de Passe'}) }}
                     </div> #}
 
                     <!-- /.card-body -->
+                    </div>
                     <div class="card-footer">
-                    <button type="submit" class="btn btn-primary">Modifier</button>
+                    <a href=" {{path('app_utilisateur')}}" class="btn btn-default "><i class="right fas fa-angle-left"></i> Retour</a>
+                    <button type="submit" class="btn btn-primary float-right">Modifier</button>
                     </div>
                 {{ form_end(form) }}
                 </div>
