--- a/templates/utlisisateur/ajout.html.twig
+++ b/templates/utlisisateur/ajout.html.twig
@@ -5,43 +5,55 @@
 
 {% block body %}
 <section class="content">
-      <div class="container-fluid">
+    <div class="container-fluid">
         <div class="row">
             <!-- left column -->
             <div class="col-md-12">
-                <div class="card card-primary">
-                <div class="card-header">
-                    <h1 class="card-title">Ajouter un nouvel utilisateur</h1>
-                </div>
+                <div class="card card-primary card-outline">
+                    <div class="card-header">
+                        <h1 class="card-title">Ajouter un nouvel utilisateur</h1>
+                    </div>
                 <!-- /.card-header -->
                 <!-- form start -->
-                {{ form_start(registrationForm) }}
+                    {{ form_start(registrationForm) }}
                     <div class="card-body">
-                    <div class="form-group">
-                         {{ form_row(registrationForm.no_mat, {label: 'N° Matricule'}) }}
+                        <div class="form-group">
+                            {{ form_row(registrationForm.no_mat, {label: 'N° Matricule'}) }}
+                        </div>
+                        <div class="form-group">
+                            {{ form_row(registrationForm.noms, {label: 'Noms'}) }}
+                        </div>
+                        <div class="form-group">
+                            {{ form_row(registrationForm.prenoms, {label: 'Prénoms'}) }}
+                        </div>
+                       
+                        <div class="row">
+                            <div class=" col-6 form-group">
+                                    {{ form_row(registrationForm.email, {label: 'Email'}) }}
+                            </div>
+                            <div class=" col-6 form-group">
+                                {{ form_row(registrationForm.telephones, {label: 'N° Téléphones'}) }}
+                            </div>
+                        </div>
+                       
+                        <div class="form-group">
+                            {{ form_row(registrationForm.plainPassword, {label: 'Mot de Passe'}) }}
+                        </div>
                     </div>
-                    <div class="form-group">
-                         {{ form_row(registrationForm.noms, {label: 'Noms'}) }}
-                    </div>
-                    <div class="form-group">
-                         {{ form_row(registrationForm.prenoms, {label: 'Prénoms'}) }}
-                    </div>
-                     <div class="form-group">
-                         {{ form_row(registrationForm.email, {label: 'Email'}) }}
-                    </div>
-                    <div class="form-group">
-                         {{ form_row(registrationForm.plainPassword, {label: 'Mot de Passe'}) }}
-                    </div>
-
-                    <!-- /.card-body -->
+                        <!-- /.card-body -->
                     <div class="card-footer">
-                    <button type="submit" class="btn btn-primary">Ajouter</button>
+                            <div class="float-right">
+                                <button type="submit" class="btn btn-success"> Enregistrer </button>
+                            </div>
+                            <a href=" {{path('app_utilisateur')}}" class="btn btn-default "><i class="right fas fa-angle-left"></i> Retour</a>
                     </div>
-                {{ form_end(registrationForm) }}
+                       
+                    {{ form_end(registrationForm) }}
                 </div>
             </div>
             <!-- /.card -->
         </div>
+    </div>
 </section>
 
 
