--- a/templates/utlisisateur/index.html.twig
+++ b/templates/utlisisateur/index.html.twig
@@ -6,23 +6,31 @@
 {% block body %}
     <section class="content">
       <div class="container-fluid">
-              <div class="row">
+        <div class="row">
+            <div class="col-lg-3 col-6">
+              <!-- small box -->
+              <div class="small-box bg-info">
+                <a href="{{ path('utilisateur.ajout') }}" class="small-box-footer"><i class="fas fa-plus"> </i>  Nouvel utilisateur</a>
+                {# <a class="btn btn-success text-light" href ="{{ path('utilisateur.ajout') }}"><i class="fas fa-plus"> Nouvel utilisateur</i> </a> #}
+              </div>
+            </div>
+            <!-- ./col -->
+        </div>
+        <div class="row">
           <div class="col-12">
             <div class="card">
               <div class="card-header">
-                <h3 class="card-title mr-5">Listes des Utilisateurs</h3>
+                <h3 class="card-title mr-5">Liste des Utilisateurs</h3>
                 
                 <div class="card-tools">
-                <div class="input-group input-group-sm" style="width: 150px;">
-                    <input type="text" name="table_search" class="form-control float-right" placeholder="Recherche">
+                  {# <div class="input-group input-group-sm" style="width: 150px;">
+                      <input type="text" name="table_search" class="form-control float-right" placeholder="Recherche">
 
-                    <div class="input-group-append">
-                      <button type="submit" class="btn btn-default"><i class="fas fa-search"></i></button>
-                    </div>
-                </div>
-                <div class="mt-3 input-group input-group-sm">
-                    <a class="btn btn-success text-light" href ="{{ path('utilisateur.ajout') }}"><i class="fas fa-plus"> Nouvel utilisateur</i> </a>
-                </div>
+                      <div class="input-group-append">
+                        <button type="submit" class="btn btn-default"><i class="fas fa-search"></i></button>
+                      </div>
+                  </div> #}
+                  </div>
               </div>
               <!-- /.card-header -->
               <div class="card-body table-responsive p-0" style="height: 300px;">
@@ -84,20 +92,29 @@
                             </a>
                         </td> #}
                         <td>
+                              <div class="btn-group">
+                                <button type="button" class="btn btn-tool dropdown-toggle" data-toggle="dropdown">
+                                  <i class="fas fa-wrench"></i>
+                                </button>
+                                <div class="dropdown-menu dropdown-menu-right" role="menu">
+                                  <a class="dropdown-item" href="{{path('utilisateur.editer', {'id': user.id})}}">Editer</a>
+                                  <a class="dropdown-item" href="{{path('utilisateur.affecter', {'id': user.id})}}">Affecter</a>
+                                </div>
+                              </div>
           
-                              <a class="btn btn-info btn-sm dropdown-toggle" data-toggle="dropdown">
+                              {# <a class="btn btn-info btn-sm dropdown-toggle" data-toggle="dropdown">
                                 <div class="dropdown-menu" >
                                   <a class="dropdown-item" href="{{path('utilisateur.editer', {'id': user.id})}}">Editer</a>
                                   <a class="dropdown-item" href="{{path('utilisateur.affecter', {'id': user.id})}}">Affecter</a>
                                 </div>
-                              <a>
+                              <a> #}
                         </td>
                     </tr>
                 {% else %}
-            <tr>
-                <td colspan="5" >Aucun utilisateur</td>
-            </tr>
-        {% endfor %}
+                  <tr>
+                      <td colspan="5" >Aucun utilisateur</td>
+                  </tr>
+                {% endfor %}
                   </tbody>
                 </table>
               </div>
