--- a/templates/visa/edit.html.twig
+++ b/templates/visa/edit.html.twig
@@ -1,13 +1,54 @@
-{% extends 'base.html.twig' %}
 
-{% block title %}Edit Visa{% endblock %}
+{% extends 'template.html.twig' %}
+{% block pageName %} 
+  Visa
+{% endblock %}
+  {% block javascript %}
+ {% endblock %}
 
 {% block body %}
-    <h1>Edit Visa</h1>
+<section class="content">
+      <div class="container-fluid">
+        <div class="row">
+            <!-- left column -->
+            <div class="col-md-12">
+                <div class="card card-primary card-outline">
+                <div class="card-header">
+                    <h1 class="card-title">Modifier {{visa.intitule}}</h1>
+                </div>
+                <!-- /.card-header -->
+                <!-- form start -->
+                
+                {{ form_start(form) }}
+                    <div class="card-body">
+                        <div class="form-group">
+                            {{ form_row(form.type, {label: "Pour quel type de Rapport ?"}) }}
+                        </div>
 
-    {{ include('visa/_form.html.twig', {'button_label': 'Update'}) }}
+                        <div class="form-group">
+                            {{ form_row(form.intitule, {label: "Intitule"}) }}
+                        </div>
+                        <div class="form-group">
+                            {{ form_row(form.remarque, {label: 'Remarque'}) }}
+                        </div>
+                    </div>
+                    <!-- /.card-body -->
+                    
+                    <div class="card-footer">
+                            <button type="submit" class="btn btn-primary float-right"><i class="fas fa-plus"></i> Mise à jour</button>
+                        
+                            <a href=" /visa/" class="btn btn-default "><i class="right fas fa-angle-left"></i> Retour</a>
+                        
+                    </div>
+                {{ form_end(form) }}
+                </div>
+            </div>
+            <!-- /.card -->
+        </div>
+    </div>
+</section>
 
-    <a href="{{ path('app_visa_index') }}">back to list</a>
 
-    {{ include('visa/_delete_form.html.twig') }}
+
 {% endblock %}
+
