--- a/templates/visa/new.html.twig
+++ b/templates/visa/new.html.twig
@@ -12,29 +12,33 @@
         <div class="row">
             <!-- left column -->
             <div class="col-md-12">
-                <div class="card card-primary">
+                <div class="card card-primary card-outline">
                 <div class="card-header">
                     <h1 class="card-title">Entrer un nouveau visa</h1>
                 </div>
                 <!-- /.card-header -->
                 <!-- form start -->
-                <div class="card-body">
+                
                 {{ form_start(form) }}
                     <div class="card-body">
-                    <div class="form-group">
-                         {{ form_row(form.type, {label: "Pour quel type de Rapport ?"}) }}
-                    </div>
+                        <div class="form-group">
+                            {{ form_row(form.type, {label: "Pour quel type de Rapport ?"}) }}
+                        </div>
 
-                    <div class="form-group">
-                         {{ form_row(form.intitule, {label: "Intitule"}) }}
+                        <div class="form-group">
+                            {{ form_row(form.intitule, {label: "Intitule"}) }}
+                        </div>
+                        <div class="form-group">
+                            {{ form_row(form.remarque, {label: 'Remarque'}) }}
+                        </div>
                     </div>
-                    <div class="form-group">
-                         {{ form_row(form.remarque, {label: 'Remarque'}) }}
-                    </div>
-
                     <!-- /.card-body -->
+                    
                     <div class="card-footer">
-                        <button type="submit" class="btn btn-primary">Ajouter</button>
+                            <button type="submit" class="btn btn-primary float-right"><i class="fas fa-plus"></i> Ajouter</button>
+                        
+                            <a href=" /visa/" class="btn btn-default "><i class="right fas fa-angle-left"></i> Retour</a>
+                        
                     </div>
                 {{ form_end(form) }}
                 </div>
